@@ -7,7 +7,6 @@ import net.minestom.server.entity.Player;
 import net.minestom.server.instance.Instance;
 
 import java.util.concurrent.ThreadLocalRandom;
-import java.util.stream.Collectors;
 
 public class DimensionCommand extends Command {
 
@@ -18,7 +17,7 @@ public class DimensionCommand extends Command {
         addSyntax((sender, context) -> {
             final Player player = sender.asPlayer();
             final Instance instance = player.getInstance();
-            final var instances = MinecraftServer.getInstanceManager().getInstances().stream().filter(instance1 -> !instance1.equals(instance)).collect(Collectors.toList());
+            final var instances = MinecraftServer.getInstanceManager().getInstances().stream().filter(instance1 -> !instance1.equals(instance)).toList();
             if (instances.isEmpty()) {
                 player.sendMessage("No instance available");
                 return;
